--- a/compose.yml
+++ b/compose.yml
@@ -1,14 +1,11 @@
+include:
+  - ../mongodb/compose.yml
+  - ../kafka/compose.yml
+
 services:
-  app:
+  nest:
     build: .
     volumes:
       - .:/home/node/app
     ports:
       - 3001:3000
-  db:
-    build: ./.docker/mongodb
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
-    ports:
-      - 27017:27017
